# LEPL1110

./: .gitignore  README.md
Devoirs/BandSolver/data/: example.txt  gear12.txt  gear8.txt  quads96.txt  rectQuad362.txt  rectTri26.txt  square3296.txt  square55.txt  square552.txt  tiny.txt
Devoirs/BandSolver/src/: fem.h  glfem.c  glfem.h  homework.c  main.c
Devoirs/GeoMesh/: CMakeLists.txt  README.md
Devoirs/GeoMesh/data/: mesh.txt
Devoirs/GeoMesh/src/: ## Copilot.md  fem.c  homework.c  main.c
Devoirs/Integrate/: CMakeLists.txt  README.md
Devoirs/Integrate/src/: fem.c  fem.h  glfem.c  glfem.h  homework.c  main.c
Devoirs/LinearElasticity/data/: elasticity.txt
Devoirs/LinearElasticity/src/: fem.c  fem.h  homework.c  main.c
Devoirs/LinearElasticityForces/: CMakeLists.txt
Devoirs/LinearElasticityForces/data/: elasticity.txt  mesh.txt
Devoirs/LinearElasticityForces/src/: fem.c  glfem.c  glfem.h  homework (2).c  homework.c  main.c
Devoirs/Poisson/data/: example.txt  mesh2520.txt  quads418.txt  tiny.txt
Devoirs/Poisson/src/: homework.c  main.c  poissonSoluce.c
Exercises/: computeSize.py  conjugate.py  hammer.py  shapes.py  steepest.py
Homeworks/BandSolver/: README.md
Homeworks/BandSolver/data/: gear16.txt  gear16coarse.txt  gear60.txt  gear8coarse.txt  mediterrannee3353.txt  quads185.txt  quads28.txt  quads346.txt  quads53.txt  rectQuad29.txt  rectQuad55.txt  rectTri18.txt  rectTri188.txt  rectTri848.txt  square1682.txt  triangles101.txt  triangles101xopt.txt  triangles101yopt.txt  triangles17.txt  triangles32.txt
Homeworks/BandSolver/src/: fem.c  homework.c
Homeworks/GeoMesh/: CMakeLists.txt
Homeworks/GeoMesh/data/: mesh.txt
Homeworks/GeoMesh/src/: fem.h  homework.c
Homeworks/Integrate/: CMakeLists.txt
Homeworks/Integrate/src/: main.c
Homeworks/LinearElasticity/: README.md
Homeworks/LinearElasticity/data/: elasticity.txt
Homeworks/LinearElasticity/src/: main.c
Homeworks/LinearElasticityForces/: CMakeLists.txt  README.md
Homeworks/LinearElasticityForces/src/: fem.h  main.c
Homeworks/Poisson/: CMakeLists.txt  README.md
Homeworks/Poisson/data/: mesh254.txt
Homeworks/Poisson/src/: fem.c  fem.h  main.c
Project/: Makefile  README.md  main  main.c  validate.py
Project/Project/: CMakeLists.txt  README.md  var.h
Project/Project/PostProcessing/: CMakeLists.txt
Project/Project/PreProcessing/: CMakeLists.txt
Project/Project/Processing/: CMakeLists.txt
Project/Project/Processing/data/: TEST.txt  UV.txt  UV_example.txt  def_convergence.csv  dirichletUnconstrainedSystemWRITED.txt  finalSystemWRITED.txt  mesh.txt  mesh_example.txt  problem.txt  problem_example.txt  sol_exact.txt  solver_type.csv  vonMises.txt
Project/Project/Processing/data/animations/: UV_1.txt  UV_10.txt  UV_11.txt  UV_12.txt  UV_13.txt  UV_14.txt  UV_15.txt  UV_16.txt  UV_17.txt  UV_18.txt  UV_19.txt  UV_2.txt  UV_20.txt  UV_21.txt  UV_22.txt  UV_23.txt  UV_24.txt  UV_25.txt  UV_26.txt  UV_27.txt  UV_28.txt  UV_29.txt  UV_3.txt  UV_30.txt  UV_31.txt  UV_32.txt  UV_33.txt  UV_34.txt  UV_35.txt  UV_36.txt  UV_37.txt  UV_38.txt  UV_39.txt  UV_4.txt  UV_40.txt  UV_41.txt  UV_42.txt  UV_43.txt  UV_44.txt  UV_45.txt  (+60 more)
Project/Project/Processing/src/: homework.c  homework_modified.c  main.c
Project/Project/ProjectPostProcessor/: CMakeLists.txt
Project/Project/ProjectPreProcessor/: CMakeLists.txt
Project/Project/ProjectProcessor/: CMakeLists.txt
Project/Project/data/: UV.txt
Project/Project/src/: fem.c  fem.h  homework.c  main.c
Project/ProjectPostProcessor/: CMakeLists.txt  README.md
Project/ProjectPostProcessor/data/: UV.txt
Project/ProjectPostProcessor/src/: beam_plot.py  convergence_plot.py  fem.h  main.c  solver_plot.py
Project/ProjectPostProcssor/: CMakeLists.txt  README.md
Project/ProjectPostProcssor/src/: beam_plot.py  constrains_plot.py  convergence_plot.py  fem.c  fem.h  main.c  plot.py  solver_plot.py
Project/ProjectPreProcessor/: CMakeLists.txt  README.md
Project/ProjectPreProcessor/data/: mesh.txt
Project/ProjectPreProcessor/src/: fem.c  fem.h  glfem.h  gmsh.c  gmsh.h  homework.c  main.c
Project/ProjectProcessor/: CMakeLists.txt
Project/ProjectProcessor/src/: fem.h  homework.c  main.c
Project/Rapport/data/: UV.txt  UV_TEST.txt  UV_beam.txt  UV_example.txt  UV_miguel.txt  UV_simplified.txt  elasticity_deformation_complete_bridge.mov  maxConstrainBridge.txt  mesh.txt  mesh_beam.txt  mesh_example.txt  mesh_simplified.txt  miguel_mesh.txt  miguel_pb.txt  problem.txt  (+2 more)
Project/data/: UV_example.txt  mesh.txt  mesh_example.txt  problem.txt  problem_example.txt
Project/datas/: perf_plot.py  solver_type.csv
Project/fem_library/: fem.c  fem.h
Project/glfem_library/: glfem.c  glfem.h
Projet/: README.md
Projet/data/: mesh.txt
Projet/src/: homework.c  main.c
Projet_ToRemoveAfter/data/: mesh.txt
Projet_ToRemoveAfter/src/: main.c
(+388 files in other folders)
